# EASY-EAI-Toolkit-3576

./: .gitignore  LICENSE  README.md  README_EN.md
Demos/: build_all_demo.sh
Demos/algorithm-car/: test-car_detect.cpp
Demos/algorithm-face_detect/: CMakeLists.txt
Demos/algorithm-ocr/: test-ocr.cpp
Demos/algorithm-person_pose/: CMakeLists.txt  test-person_pose.cpp
Demos/algorithm-speech_recognition/: CMakeLists.txt  test-speech_recognition.cpp
Demos/common-ini/: test-iniWrapper.c
Solutions/rtspIPCamera/src/: main.cpp
Solutions/rtspMulitPlayer/: CMakeLists.txt
Solutions/rtspMulitPlayer/src/: main.cpp
Solutions/rtspMulitPlayer/src/analyzer/: algoProcess.h  analyzer.h
Solutions/rtspMulitPlayer/src/capturer/: capturer.h  decChannel.h
easyeai-api/algorithm/car_detect/: api.cmake
easyeai-api/algorithm/face_detect/: api.cmake
easyeai-api/algorithm/face_recognition/: api.cmake
easyeai-api/algorithm/fire_detect/: api.cmake
easyeai-api/algorithm/helmet_detect/: api.cmake
easyeai-api/algorithm/person_detect/: api.cmake
easyeai-api/algorithm/person_pose/: api.cmake  person_pose.h
easyeai-api/algorithm/speech_recognition/: api.cmake  speech_recognition.h
easyeai-api/algorithm/speech_recognition/include/: audio_utils.h
easyeai-api/common/font_engine/: api.cmake
easyeai-api/common/ini_wrapper/: ini_wrapper.c  ini_wrapper.h
easyeai-api/common/ipc/: api.cmake
easyeai-api/common/json/: api.cmake
easyeai-api/common/log_manager/: api.cmake
